--- a/app/src/main/res/values-fr-rFR/strings.xml
+++ b/app/src/main/res/values-fr-rFR/strings.xml
@@ -31,7 +31,9 @@
     <string name="jackets">Vestes</string>
     <string name="trousers">Pantalon</string>
     <string name="shoes">Chaussures</string>
+    <string name="close_app">Appuyez sur le bouton d\'accueil pour quitter Clothual</string>
     <string name="already_an_user_login">Déjà utilisateur? Connexion</string>
+    <string name="jacket">Veste</string>
 
 
 </resources>
