--- a/app/src/main/res/values-it-rIT/strings.xml
+++ b/app/src/main/res/values-it-rIT/strings.xml
@@ -33,6 +33,7 @@
     <string name="jackets">Giacca</string>
     <string name="close_app">Premere il tasto Home per uscire da Clothual</string>
     <string name="already_an_user_login">Sei già registrato? Accedi</string>
+    <string name="jacket">Giacca</string>
 
 
 </resources>
