--- a/app/src/main/res/values-fr-rFR/strings.xml
+++ b/app/src/main/res/values-fr-rFR/strings.xml
@@ -34,6 +34,9 @@
     <string name="close_app">Appuyez sur le bouton d\'accueil pour quitter Clothual</string>
     <string name="already_an_user_login">Déjà utilisateur? Connexion</string>
     <string name="jacket">Veste</string>
+    <string name="removeImage">Supprimer l\'image ?</string>
+    <string name="yes">Oui</string>
+    <string name="no">Non</string>
 
 
 </resources>
