--- a/app/src/main/res/values-it-rIT/strings.xml
+++ b/app/src/main/res/values-it-rIT/strings.xml
@@ -34,6 +34,9 @@
     <string name="close_app">Premere il tasto Home per uscire da Clothual</string>
     <string name="already_an_user_login">Sei già registrato? Accedi</string>
     <string name="jacket">Giacca</string>
+    <string name="removeImage">Rimuovere l\'immagine?</string>
+    <string name="yes">Si</string>
+    <string name="no">No</string>
 
 
 </resources>
