--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -165,16 +165,8 @@
         "when a user tries to pick up one of cards.\n\n"
     </string>
 
- <string name="action_settings" translatable="false">Settings</string>
-    <!--
-     <string name="default_web_client_id" translatable="false">149067861032-i8o3cd406e1t7bgdhdolkrm3a60rjuji.apps.googleusercontent.com</string>
-
-     <string name="gcm_defaultSenderId" translatable="false">149067861032</string>
-     <string name="google_api_key" translatable="false">AIzaSyBKN5TltOwxIZFIwV_y75Ax-4Ggj_-BSHI</string>
-     <string name="google_app_id" translatable="false">1:149067861032:android:7fc7b030574c5c95a3b91d</string>
-     <string name="google_crash_reporting_api_key" translatable="false">AIzaSyBKN5TltOwxIZFIwV_y75Ax-4Ggj_-BSHI</string>
-     <string name="google_storage_bucket" translatable="false">clothual-b1925.appspot.com</string>
-     <string name="project_id" translatable="false">clothual-b1925</string>-->
-
-
+    <string name="action_settings" translatable="false">Settings</string>
+    <string name="removeImage">Remove image?</string>
+    <string name="yes">Yes</string>
+    <string name="no">No</string>
 </resources>
