--- a/app/src/main/res/values-it-rIT/strings.xml
+++ b/app/src/main/res/values-it-rIT/strings.xml
@@ -41,7 +41,7 @@
     <string name="sweatshirt">Felpa</string>
     <string name="favorites">Preferiti</string>
     <string name="map">Mappa</string>
-
+    <string name="login_password_empty">La password non può essere vuota</string>
 
 
 </resources>
