--- a/app/src/main/res/values-it-rIT/strings.xml
+++ b/app/src/main/res/values-it-rIT/strings.xml
@@ -42,6 +42,9 @@
     <string name="favorites">Preferiti</string>
     <string name="map">Mappa</string>
     <string name="login_password_empty">La password non può essere vuota</string>
+    <string name="login_surname_empty">Il cognome non può essere vuoto</string>
+    <string name="login_name_empty">Il nome non può essere vuoto</string>
+    <string name="login_username_empty">Il nome utente non può essere vuoto</string>
 
 
 </resources>
