--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -172,6 +172,9 @@
     <string name="favorites">Favorites</string>
     <string name="map">Map</string>
     <string name="login_password_empty" >Password cannot be empty</string>
+    <string name="login_surname_empty" >Surname cannot be empty</string>
+    <string name="login_name_empty" >Name cannot be empty</string>
+    <string name="login_username_empty" >Username cannot be empty</string>
     <!--
      <string name="default_web_client_id" translatable="false">149067861032-i8o3cd406e1t7bgdhdolkrm3a60rjuji.apps.googleusercontent.com</string>
 
