--- a/app/src/main/res/values-fr-rFR/strings.xml
+++ b/app/src/main/res/values-fr-rFR/strings.xml
@@ -44,6 +44,8 @@
     <string name="login_surname_empty">Nom ne peut pas etre vide</string>
     <string name="login_name_empty">Prénome ne peut pas etre vide</string>
     <string name="login_username_empty">Nom d\'utilisateur ne peut pas etre vide</string>
+    <string name="carica_una_foto">Télécharger une image</string>
+    <string name="scatta_una_foto">Prendre une photo</string>
 
 
 </resources>
