--- a/app/src/main/res/values-it-rIT/strings.xml
+++ b/app/src/main/res/values-it-rIT/strings.xml
@@ -53,6 +53,7 @@
     <string name="version">Versione: 1.0</string>
     <string name="developed">Sviluppato da: BDENS</string>
     <string name="language">Linguaggio: Java</string>
+    <string name="typeClothual">Tipologia</string>
 
 
 </resources>
