--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -57,8 +57,8 @@
     <string name="darkMode" translatable="false">Dark Mode</string>
     <string name="lightMode" translatable="false">Ligth Mode</string>
     <string name="systemMode" translatable="false">System Mode</string>
-    <string name="close_app" >Press home button to exit Clothual</string>
-    <string name="already_an_user_login" >Already an user? Login</string>
+    <string name="close_app">Press home button to exit Clothual</string>
+    <string name="already_an_user_login">Already an user? Login</string>
     <string name="map_key" translatable="false">AIzaSyBFB-yRv-o6lxXh2P5Ay2nTfb-EE_OAfUk</string>
     <string name="login_mail_empty">Email cannot be empty</string>
 
@@ -181,8 +181,9 @@
     <string name="scatta_una_foto">Take a photo</string>
     <string name="carica_una_foto">Upload a photo</string>
     <string name="removeImage">Remove image?</string>
-    
+
     <string name="version">Version: 1.0</string>
     <string name="developed">Developed by: BDENS</string>
     <string name="language">Language: Java</string>
+    <string name="typeClothual">Type</string>
 </resources>
